# interval

./: .gitignore  .gitlab-ci.yml  .mailmap  AUTHORS  INSTALL  INSTALL.md  Make  Makefile  Makefile.am  NEWS  NEWS.md  README  README.md  Remakefile.in  _CoqProject  bigint_carrier.v  bisect.v  configure.ac  configure.in  definitions.v  float_sig.v  generic.v  generic_ops.v  generic_proof.v  interval.v  interval_float.v  interval_float_full.v  missing.v  opam  specific_ops.v  specific_sig.v  stdz_carrier.v  tactics.v  transcend.v  xreal.v  xreal_derive.v
misc/: Dockerfile  ci.md  template.html
src/: BigNumsCompat.v.in  Interval_bigint_carrier.v  Interval_bisect.v  Interval_definitions.v  Interval_float_ext.v  Interval_float_sig.v  Interval_generic.v  Interval_generic_ops.v  Interval_generic_proof.v  Interval_integral.v  Interval_integral_taylor.v  Interval_interval.v  Interval_interval_float.v  Interval_interval_float_full.v  Interval_missing.v  Interval_specific_ops.v  Interval_specific_sig.v  Interval_stdz_carrier.v  Interval_tactic.v  Interval_taylor_model.v  Interval_transcend.v  Interval_univariate.v  Interval_xreal.v  Interval_xreal_derive.v  Makefile.am  Plot.v  Tactic.v  Tactic_bignum.v  Tactic_primfloat.v  benchmarksIntegral.v  bertrand.v  integrability.v  reals_compl.v  seq_patch.v  theory_powerRZ.v  various_integrals.v
src/Eval/: Eval.v  Prog.v  Reify.v  Tree.v
src/Float/: Basic.v  Generic.v  Generic_ops.v  Generic_proof.v  Primitive_ops.v  Sig.v  Specific_bigint.v  Specific_ops.v  Specific_sig.v  Specific_stdz.v
src/Integral/: Bertrand.v  Integral.v  Polynom.v  Priority.v  Refine.v  Various.v
src/Interval/: Eval.v  Float.v  Float_full.v  Interval.v  Interval_compl.v  Transcend.v  Univariate_sig.v
src/Missing/: Coquelicot.v  MathComp.v  Stdlib.v
src/Plot/: Plot.v  plot.c  plot.py
src/Poly/: Basic_rec.v  Bound.v  Bound_quad.v  Datatypes.v  Taylor_model.v  Taylor_model_sharp.v  Taylor_poly.v
src/Real/: Aux.v  Coquelicot_compl.v  Taylor.v  Xreal.v  Xreal_derive.v  Xreal_ssr_compat.v
src/Tactics/: Integral_helper.v  Interval_helper.v  Plot_helper.v
src/coqapprox/: Rstruct.v  basic_rec.v  coeff_inst.v  coquelicot_compl.v  derive_compl.v  integral_pol.v  interval_compl.v  nary_tuple.v  poly_bound.v  poly_bound_quad.v  poly_datatypes.v  poly_inst_seq.v  reals_tac.v  rpa_inst.v  seq_compl.v  taylor_model_float_sharp.v  taylor_model_int_sharp.v  taylor_poly.v  taylor_thm.v  xreal_ssr_compat.v
testsuite/: Makefile.am  bug-20120927.v  bug-20140723.v  bug-20140728.v  bug-20150924.v  bug-20150925.v  bug-20160218.v  bug-20200616.v  bug-20201020.v  bug-20201223.v  bug-20210113.v  example-20071016.v  example-20110205.v  example-20120205.v  example-20140221.v  example-20140610.v  example-20150105.v  example-20160218.v  example-20171018.v  example-20200428.v  example-20200430.v  example-20210218.v  example_20171018.v  example_nearbyint..v  ineq_sin_abs.v  test-failures.v
